testing non-plural name/namespace

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -14,8 +14,8 @@ clusterGroup:
     channel: release-2.4
     csv: advanced-cluster-management.v2.4.1
 
-  - name: rhacs-operators
-    namespace: rhacs-operators
+  - name: rhacs-operator
+    namespace: rhacs-operator
     channel: rhacs-3.68
     csv: rhacs-operator.v3.68.1
 
@@ -36,7 +36,7 @@ clusterGroup:
         - /spec/loggingCA
 
   - name: open-cluster-security
-    namespace: rhacs-operators
+    namespace: rhacs-operator
     project: hub
     path: common/acs
 
