fixing up securedcluster namespace

--- a/common/acs/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: platform.stackrox.io/v1alpha1
 kind: SecuredCluster
 metadata:
-  namespace: rhacs-operator
+  namespace: acs-stackrox
   name: stackrox-secured-cluster-services
 spec:
   clusterName: wh-acs-hub
