added region, bundle job, restructured

--- a/common/acs/securedcluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/securedcluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: rhacs-operator
   name: stackrox-secured-cluster-services
 spec:
-  clusterName: wh-central
+  clusterName: wh-central  # {{ .Values.global.clusterName }}
   auditLogs:
     collection: Auto
   admissionControl:
