--- a/values-region-one.yaml
+++ b/values-region-one.yaml
@@ -11,17 +11,29 @@ clusterGroup:
   namespaces:
     - multicloud-gitops-region-one
     - config-demo
+    - rhacs-operator
+    - policies
 
   subscriptions:
+  - name: rhacs-operator  #packageName
+    namespace: openshift-operators # operator namespace
+    channel: rhacs-3.68
+    csv: rhacs-operator.v3.68.1
 
   projects:
     - config-demo
+    - region
 
   applications:
   - name: config-demo
     namespace: config-demo
     project: config-demo
     path: charts/all/config-demo
+
+  - name: acs-secured-cluster
+    namespace: rhacs-operator
+    project: hub
+    path: common/acs/securedcluster
 
 #
 #  To have apps in multiple flavors, use namespaces and use helm overrides as appropriate
