--- a/common/acs/central/templates/create-cluster-init-bundle-sa.yaml
+++ b/common/acs/central/templates/create-cluster-init-bundle-sa.yaml
@@ -30,7 +30,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: create-cluster-init
-  namespace: stackrox
+  namespace: rhacs-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -38,10 +38,10 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: create-cluster-init
-    namespace: stackrox
+    namespace: rhacs-operator
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: create-cluster-init
-  namespace: stackrox
+  namespace: rhacs-operator
