Fixed gitops project name to region

--- a/values-region-one.yaml
+++ b/values-region-one.yaml
@@ -32,7 +32,7 @@ clusterGroup:
 
   - name: acs-secured-cluster
     namespace: rhacs-operator
-    project: hub
+    project: region
     path: common/acs/securedcluster
 
 #
