--- a/values-region-one.yaml
+++ b/values-region-one.yaml
@@ -7,7 +7,9 @@ global:
 clusterGroup:
   name: region-one
   isHubCluster: false
-
+  # WH-TO-DO remove the following line once we figure out clusterName
+  clusterName: wh-secured
+  
   namespaces:
     - multicloud-gitops-region-one
     - config-demo
