--- a/common/acs/central/Chart.yaml
+++ b/common/acs/central/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 description: A Helm chart to configure Advanced Cluster Security for OpenShift
 keywords:
 - pattern
-name: acm
+name: acs
 version: 0.0.1
