fixed hyphonated and dotted data names in json

--- a/common/acs/securedcluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/securedcluster/templates/secured-cluster-secret-policy.yaml
@@ -31,11 +31,11 @@ spec:
                   namespace: rhacs-operator
                 apiVersion: v1
                 data:
-                  ca-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data.ca-key.pem hub}}` }}'
-                  ca.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data.ca.pem hub}}` }}'
-                  ca-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data.ca-key.pem hub}}` }}'
-                  jwt-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data.jwt-key.pem hub}}` }}'
-                  key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data.key.pem hub}}` }}'
+                  ca-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
+                  jwt-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "jwt-key.pem" hub}}` }}'
+                  key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "key.pem" hub}}` }}'
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
