--- a/common/acs/securedcluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/securedcluster/templates/secured-cluster-secret-policy.yaml
@@ -32,10 +32,10 @@ spec:
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
-#                  ca.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data."ca.pem" hub}}` }}'
-#                  ca-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data."ca-key.pem" hub}}` }}'
-#                  jwt-key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data."jwt-key.pem" hub}}` }}'
-#                  key.pem: '{{ `{{hub (lookup "v1" "Secret" "rhacs-operator" "central-tls").data."key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
+                  jwt-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "jwt-key.pem" hub}}` }}'
+                  key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "key.pem" hub}}` }}'
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
