--- a/values-region-one.yaml
+++ b/values-region-one.yaml
@@ -8,7 +8,7 @@ clusterGroup:
   name: region-one
   isHubCluster: false
   # WH-TO-DO remove the following line once we figure out clusterName
-  clusterName: wh-secured
+  clusterName: wh-secured-2
   
   namespaces:
     - multicloud-gitops-region-one
