--- a/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -27,13 +27,13 @@ spec:
                 kind: Secret
                 type: Opaque
                 metadata:
-                  name: stackrox-secured-cluster-services
-                  namespace: rhacs-operator
+                  name: secured-cluster-secret
+                  namespace: default
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
                   ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca.pem" hub}}` }}'
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "cert.pem" hub}}` }}'
                   jwt-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "jwt-key.pem" hub}}` }}'
                   key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "key.pem" hub}}` }}'
 ---
