--- a/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -42,6 +42,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
+  namespace: rhacs-operator
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -56,6 +57,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
+  namespace: rhacs-operator
 spec:
   # This will go to all clusters
   clusterConditions:
