added object namespace rhacs-operator

--- a/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -29,7 +29,7 @@ spec:
                 type: Opaque
                 metadata:
                   name: secured-cluster-secret
-                  namespace: default
+                  namespace: rhacs-operator
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
