--- a/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -2,7 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: secured-cluster-secret-policy
-  namespace: rhacs-operator
+  namespace: default
 spec:
   remediationAction: enforce
   disabled: false
@@ -29,7 +29,7 @@ spec:
                 type: Opaque
                 metadata:
                   name: secured-cluster-secret
-                  namespace: rhacs-operator
+                  namespace: default
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
@@ -42,7 +42,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
-  namespace: rhacs-operator
+  namespace: default
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -57,7 +57,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
-  namespace: rhacs-operator
+  namespace: default
 spec:
   # This will go to all clusters
   clusterConditions:
