added metadata labels

--- a/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/charts/region/acs-secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -1,6 +1,8 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
+  labels:
+    argocd.argoproj.io/instance: acs-secured-cluster-policy
   name: secured-cluster-secret-policy
   namespace: default
 spec:
@@ -41,6 +43,8 @@ spec:
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
+  labels:
+    argocd.argoproj.io/instance: acs-secured-cluster-policy
   name: secured-cluster-secret-placement-binding
   namespace: default
 placementRef:
@@ -56,6 +60,8 @@ subjects:
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
+  labels:
+    argocd.argoproj.io/instance: acs-secured-cluster-policy
   name: secured-cluster-secret-placement
   namespace: default
 spec:
