added endpoint to values file

--- a/common/acs/secured-cluster/values.yaml
+++ b/common/acs/secured-cluster/values.yaml
@@ -1,1 +1,3 @@
-# Unused for now
+endpoint:
+  central: central-rhacs-operator.apps.wh-central.blueprints.rhecoeng.com:443
+  advertised: sensor.stackrox:443
