--- a/common/acs/secured-cluster/values.yaml
+++ b/common/acs/secured-cluster/values.yaml
@@ -1,3 +1,7 @@
+cluster:
+  name: {{ .Values.clusterGroup.clusterName }}
+  type: KUBERNETES_CLUSTER
+
 endpoint:
   central: central-rhacs-operator.apps.wh-central.blueprints.rhecoeng.com:443
   advertised: sensor.stackrox:443
