--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -1,6 +1,8 @@
 ﻿apiVersion: platform.stackrox.io/v1alpha1
 kind: SecuredCluster
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   namespace: rhacs-operator
   name: stackrox-secured-cluster-services
 spec:
