changed the endPoint url

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -16,7 +16,7 @@ spec:
     listenOnCreates: true
     timeoutSeconds: 3
     listenOnEvents: true
-  centralEndpoint: central-rhacs-operator.apps.wh-central.blueprints.rhecoeng.com:443
+  centralEndpoint: central.wh-central.blueprints.rhecoeng.com:443
   perNode:
     collector:
       collection: KernelModule
