cleaning up some debris

--- a/common/acs/central/templates/central-stackrox-central-services.yaml
+++ b/common/acs/central/templates/central-stackrox-central-services.yaml
@@ -7,7 +7,7 @@ spec:
   central:
     exposure:
       loadBalancer:
-        enabled: true
+        enabled: false
         port: 443
       nodePort:
         enabled: false
