added back clusterName because global not working

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rhacs-operator
   name: stackrox-secured-cluster-services
 spec:
-  clusterName: {{ .Values.global.clusterName }}                            
+  clusterName: {{ .Values.clusterGroup.clusterName }}                            
   auditLogs:
     collection: Auto
   admissionControl:
