--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -1,6 +1,8 @@
 clusterGroup:
   name: hub
   isHubCluster: true
+  # WH-TO-DO remove the following line once we figure out clusterName
+  clusterName: wh-central
 
   namespaces:    
   - open-cluster-management
