--- a/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
-  name: secured-cluster-secret-policy
+  name: rhacs-operator.secured-cluster-secret-policy
 spec:
   remediationAction: enforce
   disabled: false
