removed HLQ because it just appends again

--- a/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
-  name: rhacs-operator.secured-cluster-secret-policy
+  name: secured-cluster-secret-policy
 spec:
   remediationAction: enforce
   disabled: false
@@ -40,13 +40,13 @@ spec:
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
-  name: rhacs-operator.secured-cluster-secret-placement-binding
+  name: secured-cluster-secret-placement-binding
 placementRef:
-  name: rhacs-operator.secured-cluster-secret-placement
+  name: secured-cluster-secret-placement
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
-  - name: rhacs-operator.secured-cluster-secret-policy
+  - name: secured-cluster-secret-policy
     kind: Policy
     apiGroup: policy.open-cluster-management.io
 ---
@@ -54,7 +54,7 @@ subjects:
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: rhacs-operator.secured-cluster-secret-placement
+  name: secured-cluster-secret-placement
 spec:
   # This will go to all clusters
   clusterConditions:
