changed namescpace selctor to rhacs-operator

--- a/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -20,7 +20,7 @@ spec:
             exclude:
               - kube-*
             include:
-              - default
+              - rhacs-operator
           object-templates:
             - complianceType: musthave
               objectDefinition:
