--- a/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/secured-cluster/templates/secured-cluster-secret-policy.yaml
@@ -41,6 +41,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
+  namespace: rhacs-operator
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -55,6 +56,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
+  namespace: rhacs-operator
 spec:
   # This will go to all clusters
   clusterConditions:
