--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -28,7 +28,7 @@ spec:
                 type: Opaque
                 metadata:
                   name: secured-cluster-secret
-                  namespace: rhacs-operator
+                  namespace: wh-secured
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
