changed ns for all polcy stuff with wh-secured

--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -28,7 +28,7 @@ spec:
                 type: Opaque
                 metadata:
                   name: secured-cluster-secret
-                  namespace: wh-secured
+                  namespace: {{ .Values.clusterGroup.clusterName }}
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
@@ -41,7 +41,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
-  namespace: rhacs-operator
+  namespace: {{ .Values.clusterGroup.clusterName }}
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -56,7 +56,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
-  namespace: rhacs-operator
+  namespace: {{ .Values.clusterGroup.clusterName }}
 spec:
   # This will go to all clusters
   clusterConditions:
