--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -27,8 +27,8 @@ spec:
                 kind: Secret
                 type: Opaque
                 metadata:
-                  name: secured-cluster-secret
-                  namespace: {{ .Values.clusterGroup.clusterName }}
+                  name: central-tls
+                  namespace: rhacs-operator
                 apiVersion: v1
                 data:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
@@ -36,12 +36,37 @@ spec:
                   cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "cert.pem" hub}}` }}'
                   jwt-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "jwt-key.pem" hub}}` }}'
                   key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "key.pem" hub}}` }}'
+            - complianceType: musthave
+              objectDefinition:
+                kind: Secret
+                type: Opaque
+                metadata:
+                  name: admission-control-tls
+                  namespace: rhacs-operator
+                apiVersion: v1
+                data:
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-cert.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca.pem" hub}}` }}'
+            - complianceType: musthave
+              objectDefinition:
+                kind: Secret
+                type: Opaque
+                metadata:
+                  name: sensor-tls
+                  namespace: rhacs-operator
+                apiVersion: v1
+                data:
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca.pem" hub}}` }}'
+
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
-  namespace: {{ .Values.clusterGroup.clusterName }}
+  namespace: rhacs-operator
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -56,7 +81,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
-  namespace: {{ .Values.clusterGroup.clusterName }}
+  namespace: rhacs-operator
 spec:
   # This will go to all clusters
   clusterConditions:
