added collector-tls secret

--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -60,6 +60,18 @@ spec:
                   ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
                   ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-key.pem" hub}}` }}'
                   cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca.pem" hub}}` }}'
+            - complianceType: musthave
+              objectDefinition:
+                kind: Secret
+                type: Opaque
+                metadata:
+                  name: collector-tls
+                  namespace: rhacs-operator
+                apiVersion: v1
+                data:
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca.pem" hub}}` }}'
 
 ---
 apiVersion: policy.open-cluster-management.io/v1
