fixes to all secrets keys

--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -45,9 +45,11 @@ spec:
                   namespace: rhacs-operator
                 apiVersion: v1
                 data:
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-cert.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca.pem" hub}}` }}'
+                  admission-control-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-cert.pem" hub}}` }}'
+                  admission-control-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "cert.pem" hub}}` }}'
             - complianceType: musthave
               objectDefinition:
                 kind: Secret
@@ -57,9 +59,11 @@ spec:
                   namespace: rhacs-operator
                 apiVersion: v1
                 data:
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca.pem" hub}}` }}'
+                  sensor-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
+                  sensor-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "cert.pem" hub}}` }}'
             - complianceType: musthave
               objectDefinition:
                 kind: Secret
@@ -69,9 +73,11 @@ spec:
                   namespace: rhacs-operator
                 apiVersion: v1
                 data:
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca.pem" hub}}` }}'
+                  collector-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  collector-cert: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "cert.pem" hub}}` }}'
 
 ---
 apiVersion: policy.open-cluster-management.io/v1
