Changed rhacs-operator ns to stackrox

--- a/common/acs/central/templates/central-stackrox-central-services.yaml
+++ b/common/acs/central/templates/central-stackrox-central-services.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: platform.stackrox.io/v1alpha1
 kind: Central
 metadata:
-  namespace: rhacs-operator
+  namespace: stackrox
   name: stackrox-central-services
 spec:
   central:
