--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -21,70 +21,57 @@ spec:
               - kube-*
             include:
               - rhacs-operator
+              - stackrox
           object-templates:
             - complianceType: musthave
               objectDefinition:
                 kind: Secret
                 type: Opaque
                 metadata:
-                  name: central-tls
-                  namespace: rhacs-operator
-                apiVersion: v1
-                data:
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca-key.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "ca.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "cert.pem" hub}}` }}'
-                  jwt-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "jwt-key.pem" hub}}` }}'
-                  key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "central-tls").data "key.pem" hub}}` }}'
-            - complianceType: musthave
-              objectDefinition:
-                kind: Secret
-                type: Opaque
-                metadata:
                   name: admission-control-tls
-                  namespace: rhacs-operator
+                  namespace: stackrox
                 apiVersion: v1
                 data:
-                  admission-control-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-cert.pem" hub}}` }}'
-                  admission-control-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "admission-control-key.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca.pem" hub}}` }}'
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "ca-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "admission-control-tls").data "cert.pem" hub}}` }}'
+                  admission-control-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "admission-control-tls").data "admission-control-cert.pem" hub}}` }}'
+                  admission-control-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "admission-control-tls").data "admission-control-key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "admission-control-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "admission-control-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "admission-control-tls").data "cert.pem" hub}}` }}'
             - complianceType: musthave
               objectDefinition:
                 kind: Secret
                 type: Opaque
                 metadata:
                   name: sensor-tls
-                  namespace: rhacs-operator
+                  namespace: stackrox
                 apiVersion: v1
                 data:
-                  sensor-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
-                  sensor-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "sensor-key.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca.pem" hub}}` }}'
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "ca-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "sensor-tls").data "cert.pem" hub}}` }}'
+                  sensor-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "sensor-tls").data "sensor-cert.pem" hub}}` }}'
+                  sensor-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "sensor-tls").data "sensor-key.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "sensor-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "sensor-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "sensor-tls").data "cert.pem" hub}}` }}'
             - complianceType: musthave
               objectDefinition:
                 kind: Secret
                 type: Opaque
                 metadata:
                   name: collector-tls
-                  namespace: rhacs-operator
+                  namespace: stackrox
                 apiVersion: v1
                 data:
-                  collector-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
-                  collector-cert: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "collector-cert.pem" hub}}` }}'
-                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca.pem" hub}}` }}'
-                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "ca-key.pem" hub}}` }}'
-                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "rhacs-operator" "collector-tls").data "cert.pem" hub}}` }}'
+                  collector-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  collector-cert: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "ca.pem" hub}}` }}'
+                  ca-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "ca-key.pem" hub}}` }}'
+                  cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "cert.pem" hub}}` }}'
 
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: secured-cluster-secret-placement-binding
-  namespace: rhacs-operator
+  namespace: stackrox
 placementRef:
   name: secured-cluster-secret-placement
   kind: PlacementRule
@@ -99,7 +86,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: secured-cluster-secret-placement
-  namespace: rhacs-operator
+  namespace: stackrox
 spec:
   # This will go to all clusters
   clusterConditions:
