some more ns stuff

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "3"
   name: stackrox-secured-cluster-services
+  namespace: stackrox
 spec:
   clusterName: {{ .Values.clusterGroup.clusterName }}                            
   auditLogs:
