fixed collector key

--- a/common/acs/central/templates/secured-cluster-secret-policy.yaml
+++ b/common/acs/central/templates/secured-cluster-secret-policy.yaml
@@ -57,7 +57,7 @@ spec:
                 apiVersion: v1
                 data:
                   collector-cert.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "collector-cert.pem" hub}}` }}'
-                  collector-cert: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "collector-cert.pem" hub}}` }}'
+                  collector-key.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "collector-key.pem" hub}}` }}'
                   ca.pem: '{{ `{{hub index (lookup "v1" "Secret" "stackrox" "collector-tls").data "ca.pem" hub}}` }}'
 
 ---
