--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -6,7 +6,7 @@ metadata:
   name: stackrox-secured-cluster-services
   namespace: stackrox
 spec:
-  clusterName: {{ .Values.clusterGroup.clusterName }}                            
+  clusterName: {{ .Values.global.clusterName }}                            
   auditLogs:
     collection: Auto
   admissionControl:
@@ -16,7 +16,7 @@ spec:
     listenOnCreates: true
     timeoutSeconds: 3
     listenOnEvents: true
-  centralEndpoint: central-stackrox.apps.{{ .Values.global.centralDomain }}:443
+  centralEndpoint: central-stackrox.{{ .Values.global.hubClusterDomain }}:443
   perNode:
     collector:
       collection: KernelModule
