--- a/common/clustergroup/templates/applications.yaml
+++ b/common/clustergroup/templates/applications.yaml
@@ -42,7 +42,7 @@ spec:
         - name: global.localClusterDomain
           value: {{ coalesce $.Values.global.localClusterDomain $.Values.global.hubClusterDomain }}
         - name: global.localClusterName
-          value: {{ coalesce $.Values.global.localClusterName $.Values.global.hubClusterName }}
+          value: {{ $.Values.global.localClusterName }}
         {{- range .overrides }}
         - name: {{ .name }}
           value: {{ .value | quote }}
