moved back to clusterGroup.clusterName

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -6,7 +6,7 @@ metadata:
   name: stackrox-secured-cluster-services
   namespace: stackrox
 spec:
-  clusterName: {{ .Values.global.clusterName }}                            
+  clusterName: {{ .Value.clusterGroup.clusterName }}                            
   auditLogs:
     collection: Auto
   admissionControl:
