using fromSecret to get clusterName

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -6,7 +6,9 @@ metadata:
   name: stackrox-secured-cluster-services
   namespace: stackrox
 spec:
-  clusterName: {{ .Value.clusterGroup.clusterName }}                            
+  clusterName: |
+    {{ fromSecret "open-cluster-management-agent" "hub-kubeconfig-secret" "cluster-name" | base64dec }}
+ # clusterName: {{ .Value.clusterGroup.clusterName }}                            
   auditLogs:
     collection: Auto
   admissionControl:
