removed fromSecret. not yet supported

--- a/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
+++ b/common/acs/secured-cluster/templates/securedcluster-stackrox-secured-cluster-services.yaml
@@ -6,9 +6,10 @@ metadata:
   name: stackrox-secured-cluster-services
   namespace: stackrox
 spec:
-  clusterName: |
-    {{ fromSecret "open-cluster-management-agent" "hub-kubeconfig-secret" "cluster-name" | base64dec }}
- # clusterName: {{ .Value.clusterGroup.clusterName }}                            
+ # Future API  
+ # clusterName: |
+ #   {{ fromSecret "open-cluster-management-agent" "hub-kubeconfig-secret" "cluster-name" | base64dec }}
+  clusterName: {{ .Value.clusterGroup.clusterName }}                            
   auditLogs:
     collection: Auto
   admissionControl:
