--- a/values-global.yaml
+++ b/values-global.yaml
@@ -7,5 +7,8 @@ global:
     syncPolicy: Automatic
     installPlanApproval: Automatic
 
+  testlab:
+    namespace: "lab-kafka"  
+
 main:
   clusterGroupName: hub
