--- a/charts/all/kafka/template/kafka-cluster.yaml
+++ b/charts/all/kafka/template/kafka-cluster.yaml
@@ -3,6 +3,8 @@ kind: Kafka
 metadata:
  name: lab-cluster
  namespace: {{ .Values.global.testlab.namespace }}
+ annotations:
+   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
  entityOperator:
    topicOperator: {}
