fix the chart path

--- a/values-AWS.yaml
+++ b/values-AWS.yaml
@@ -1,7 +1,7 @@
 clusterGroup:
   applications:
     vault:
-      path: all/aws-secrets
+      path: charts/all/aws-secrets
 
 cloud:
   region: us-west-1
