need to change the ClusterSecreSotre name to match expected in config-demo

--- a/charts/all/aws-secrets/values.yaml
+++ b/charts/all/aws-secrets/values.yaml
@@ -2,8 +2,6 @@ cloud:
   region: us-east-1
 
 secretStore:
-  name: gitops-secrets
+  name: vault-backend
   kind: ClusterSecretStore
 
-configdemosecret:
-  key: config-demo
