--- a/charts/all/aws-secrets/templates/gitops-secrets.yaml
+++ b/charts/all/aws-secrets/templates/gitops-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: gitops-secrets
+  name: vault-backend
 spec:
   provider:
     aws:
