--- a/charts/all/aws-secrets/templates/gitops-secrets.yaml
+++ b/charts/all/aws-secrets/templates/gitops-secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: vault-backend
+  name: aws-backend
+  namespace: golang-external-secrets
 spec:
   provider:
     aws:
