test namespace for aws-creds

--- a/charts/all/aws-secrets/templates/gitops-secrets.yaml
+++ b/charts/all/aws-secrets/templates/gitops-secrets.yaml
@@ -13,7 +13,9 @@ spec:
           accessKeyIDSecretRef:
             name: aws-creds
             key: aws_access_key_id
+            namespace: kube-system
           secretAccessKeySecretRef:
             name: aws-creds
             key: aws_secret_access_key
+            namespace: kube-system
 
