added some commnets and updated chart

--- a/charts/all/aws-secrets/templates/gitops-secrets.yaml
+++ b/charts/all/aws-secrets/templates/gitops-secrets.yaml
@@ -1,8 +1,10 @@
+# This does all the work for ESO and AWS
+# The only templated 
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: aws-backend
-  namespace: golang-external-secrets
+  name: {{ Values.secretStore.name }}
+  namespace: {{ Values.secretStore.kind }}
 spec:
   provider:
     aws:
